--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,3 +13,76 @@ a.active {
 nav {
   padding-top: 20px;
 }
+
+
+/* sample-login-form */
+.sample-login-form>div {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 10px 5px;
+}
+
+.sample-login-form>div>label {
+  font-weight: 700;
+  margin-right: 10px;
+  min-width: 150px;
+  text-align: right;
+  padding: 6px 9px;
+}
+
+.sample-login-form>div>div {
+  flex: 1;
+  max-width: 500px;
+  display: flex;
+  flex-flow: column;
+  position: relative;
+}
+
+.sample-login-form>div>div>* {
+  -ms-flex: 1;
+  flex: 1;
+  font-size: 16px;
+  padding: 5px 8px;
+  border: 1px solid #ccc;
+}
+
+.sample-login-form>div>div>span {
+  border: none;
+  font-weight: 700;
+  color: #700;
+}
+
+.sample-login-form>div button {
+  margin: 10px;
+}
+
+.sample-login-form button {
+  cursor: pointer;
+}
+
+.sample-login-form>div button[type=submit] {
+  white-space: nowrap;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px 15px;
+  font-size: 20px;
+  color: #fff;
+  background-image: linear-gradient(#4f93ce,#285f8f);
+  border: 1px solid #285f8f;
+}
+
+.sample-login-form>div button[type=button] {
+  white-space: nowrap;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px 15px;
+  font-size: 20px;
+  color: #fff;
+  background-image: linear-gradient(#fff,#d5d5d5);
+  border: 1px solid #d5d5d5;
+  color: #000;
+}
